@@ -9,10 +9,11 @@ WriteMakefile(
     ABSTRACT_FROM       => 'lib/Getopt/Euclid.pm',
     PL_FILES            => {},
     PREREQ_PM => {
-        'Test::More' => 0,
-        'version'    => 0,
+        'Test::More'            => 0,
+        'version'               => 0,
         'File::Spec::Functions' => 0,
-        'List::Util' => 0,
+        'List::Util'            => 0,
+        'Text::Balanced'        => 0,
     },
     dist                => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean               => { FILES => 'Getopt-Euclid-*' },
